desktop-1 class name change
desktop-1 class name düzenlemeleri yapıldı.

--- a/desktop-1.html
+++ b/desktop-1.html
@@ -11,101 +11,101 @@
   <link rel="stylesheet" href="./styles/desktop-1.css"/>
   <style>
     /* Add styles to reduce the height of the blue rectangle */
-    .rectangle-7-6gL,
-    .rectangle-8-Nvg,
-    .rectangle-9-2EY {
+    .carb_greenpart,
+    .prot_greenpart,
+    .fat_greenpart {
       height: 10px; /* Adjust the height as needed */
-    } 
+    }
     .clickable-icon {
       cursor: pointer;
-    } /* Adjust the height as needed */
-  </style> 
+    }
+  </style>
 </head>
 <body>
-<div class="desktop-1-c8L">
-  <div class="auto-group-imbj-cGk">
-    <div class="auto-group-rtel-3Fa">
-      <p class="kahvalt-uoa clickable-icon" onclick="navigateToDesktop3()">
-        <span class="kahvalt-uoa-sub-0">Kahvaltı  </span>
-        <span class="kahvalt-uoa-sub-1">    </span>
+<div class="Background">
+  <div class="Nutritions_chart">
+    <div class="Breakfast_div">
+      <p class="Breakfast_text clickable-icon" onclick="navigateToDesktop3()">
+        <span class="Breakfast_text-sub-0">Kahvaltı  </span>
+        <span class="Breakfast_text-sub-1">    </span>
       </p>
-      <img class="icons8-add-50-2-1-7aC clickable-icon" src="./assets/icons8-add-50-2-1.png" onclick="navigateToDesktop3()"/>
+      <img class="Breakfast_Add_icon clickable-icon" src="./assets/icons8-add-50-2-1.png" onclick="navigateToDesktop3()"/>
     </div>
-    <div class="auto-group-8qet-1vU">
-      <div class="auto-group-ur4c-ukx">
-        <p class="item-1150-BiU">
-          <span class="item-1150-BiU-sub-0">     </span>
-          <span class="item-1150-BiU-sub-1"> 1150</span>
+    <div class="Nutritions_Background_box">
+      <div class="Carb_Protein_Fat_Chart">
+        <p class="Calorie_Calculator">
+          <span class="Calorie_Calculator-sub-0">     </span>
+          <span class="Calorie_Calculator-sub-1"> 1150</span>
         </p>
-        <p class="kalan-WGt">
-          <span class="kalan-WGt-sub-0"> </span>
-          <span class="kalan-WGt-sub-1">KALAN</span>
+        <p class="kalan_text">
+          <span class="kalan_text-sub-0"> </span>
+          <span class="kalan_text-sub-1">KALAN</span>
         </p>
       </div>
-      <div class="auto-group-r6z8-ag4">
-        <p class="karbonhidrat-gDJ">Karbonhidrat</p>
-        <p class="protein-zjn">Protein</p>
-        <p class="ya-YFW">Yağ</p>
+      <div class="carb_prot_fat_div">
+        <p class="carb_text">Karbonhidrat</p>
+        <p class="protein_text">Protein</p>
+        <p class="fat_text">Yağ</p>
       </div>
-      <div class="auto-group-615w-dGx">
-        <div class="auto-group-d7ps-Mik">
-          <div class="rectangle-7-6gL">
+      <div class="carb_prot_fat_greypart">
+        <div class="carb_greypart">
+          <div class="carb_greenpart">
           </div>
         </div>
-        <div class="auto-group-afa4-EZa">
-          <div class="rectangle-8-Nvg">
+        <div class="prot_greypart">
+          <div class="prot_greenpart">
           </div>
         </div>
-        <div class="auto-group-3rq8-JZS">
-          <div class="rectangle-9-2EY">
+        <div class="fat_greypart">
+          <div class="fat_greenpart">
           </div>
         </div>
       </div>
-      <div class="auto-group-8vrg-w6c">
-        <p class="g-tGk">110 / 295 g</p>
-        <p class="g-o8p">45 / 110 g</p>
-        <p class="g-JLU">58 / 80 g</p>
+      <div class="carb_prot_fat_textlocation">
+        <p class="carb_text">110 / 295 g</p>
+        <p class="prot_text">45 / 110 g</p>
+        <p class="fat_text">58 / 80 g</p>
       </div>
     </div>
   </div>
-  <div class="auto-group-mkma-jwa clickable-icon" onclick="navigateToFrame3()">
-    <div class="auto-group-ts56-rmJ">
-      <img class="logout-3-AX6" src="./assets/logout-3.png"/>
-      <p class="k-yap-RC8">Çıkış Yap</p>
+  <div class="background2 clickable-icon" >
+    <div class="logout_location">
+      <img class="logout" src="./assets/logout-3.png"/>
+      <p class="logout_text">Çıkış Yap</p>
     </div>
-    <div class="auto-group-t1bj-KHW clickable-icon" onclick="navigateToDesktop3()">
-      <img class="rectangle-10-Ddn" src="./assets/rectangle-10-oVW.png"/>
-      <p class="yemek-nerisi-al-Mjz">
+    <div class="food_suggest_location clickable-icon" onclick="navigateToDesktop3()">
+      <img class="food_suggest_icon" src="./assets/rectangle-10-oVW.png"/>
+      <p class="food_suggest_text">
         Yemek Önerisi Al
         <br/>
       </p>
     </div>
-    <div class="auto-group-bxms-tE8">
-      <img class="rectangle-2-QiG" src="./assets/rectangle-2-LFN.png"/>
-      <p class="profil-wiC">Profil</p>
+    <div class="profile_location">
+      <img class="profile_icon" src="./assets/rectangle-2-LFN.png"/>
+      <p class="profile_text">Profil</p>
     </div>
-    <div class="auto-group-mwnx-p1J">
-      <img class="icons8-home-50-1-YT6" src="./assets/icons8-home-50-1.png"/>
-      <p class="ana-sayfa-Ube">Ana Sayfa</p>
+    <div class="mainpage_location">
+      <img class="mainpage_icon" src="./assets/icons8-home-50-1.png"/>
+      <p class="mainpage_text">Ana Sayfa</p>
     </div>
   </div>
-  <div class="auto-group-qmps-o88 clickable-icon" onclick="navigateToDesktop3()">
-    <p class="le-yemei-Uzx">
+  <div class="background3 clickable-icon" onclick="navigateToDesktop3()">
+    <p class="Lunch_text">
       Öğle Yemeği
       <br/>
     </p>
-    <img class="icons8-add-50-2-2-BeU clickable-icon" src="./assets/icons8-add-50-2-2.png" onclick="navigateToDesktop3()"/>
+    <img class="lunch_icon clickable-icon" src="./assets/icons8-add-50-2-2.png" onclick="navigateToDesktop3()"/>
   </div>
-  <div class="auto-group-mtix-6Fe clickable-icon" onclick="navigateToDesktop3()">
-    <p class="attrmalk-phS">Atıştırmalık</p>
-    <img class="icons8-add-50-2-3-jpQ clickable-icon" src="./assets/icons8-add-50-2-3.png" onclick="navigateToDesktop3()"/>
+  <div class="snacks_location clickable-icon" onclick="navigateToDesktop3()">
+    <p class="snacks_text">Atıştırmalık</p>
+    <img class="snacks_icon clickable-icon" src="./assets/icons8-add-50-2-3.png" onclick="navigateToDesktop3()"/>
   </div>
-  <div class="auto-group-tpcc-Umz clickable-icon" onclick="navigateToDesktop3()">
-    <p class="akam-yemei-Ptx">
-      <span class="akam-yemei-Ptx-sub-0">Akşam Yemeği  </span>
-      <span class="akam-yemei-Ptx-sub-1">    </span>
+  <div class="dinner_location clickable-icon" onclick="navigateToDesktop3()">
+    <p class="dinner_text">
+      <span class="dinner_text-sub-0">Akşam Yemeği  </span>
+      <span class="dinner_text-sub-1">    </span>
     </p>
-    <img class="icons8-add-50-2-4-PR6 clickable-icon" src="./assets/icons8-add-50-2-4.png" onclick="navigateToDesktop3()"/>
+    <img class="dinner_icon clickable-icon" src="./assets/icons8-add-50-2-4.png" onclick="navigateToDesktop3()"/>
   </div>
 </div>
 <script>
