desktop-3 class name düzenlendi
desktop-3 html,css,scsss class nameleri düzenlendi

--- a/desktop-3.html
+++ b/desktop-3.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./styles/desktop-3.css"/>
   <style>
     /* Add styles for the search bar */
-    .search-bar {
+    .search_bar {
       display: flex;
       align-items: center;
       background-color: #f1f1f1;
@@ -20,154 +20,148 @@
       margin-top: 16px;
     }
 
-    .search-bar input {
+    .search_bar input {
       flex: 1;
       border: none;
       padding: 8px;
       font-size: 16px;
     }
 
-    .search-bar img {
+    .search_bar img {
       width: 24px;
-      height: 24px;
+      height: 12px;
       margin-left: 8px;
       cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="desktop-3-mYg">
-    <div class="auto-group-ggxn-65A">
-      <div class="auto-group-rgbw-bXi">
-        <img class="logout-2-vK6" src="./assets/logout-2.png"/>
-        <p class="k-yap-eF6">Çıkış Yap</p>
+  <div class="food_search_background">
+    <div class="bottom_div">
+      <div class="logout_div">
+        <img class="logout_icon" src="./assets/logout-2.png"/>
+        <p class="logout_text">Çıkış Yap</p>
       </div>
-      <div class="auto-group-zdly-k3E">
-        <img class="rectangle-10-GnG" src="./assets/rectangle-10.png"/>
-        <p class="yemek-nerisi-al-b3r">
+      <div class="food_suggestion_div">
+        <img class="food_suggestion_icon" src="./assets/rectangle-10.png"/>
+        <p class="food_suggestion_text">
           Yemek Önerisi Al
         <br/>
         </p>
       </div>
-      <div class="auto-group-s9zt-sGG">
-        <img class="rectangle-2-Bnk" src="./assets/rectangle-2.png"/>
-        <p class="profil-j3a">Profil</p>
+      <div class="profile_div">
+        <img class="profile_icon" src="./assets/rectangle-2.png"/>
+        <p class="profile_text">Profil</p>
       </div>
-      <div class="auto-group-chwc-EW8">
-        <img class="icons8-home-50-1-mW4" src="./assets/icons8-home-50-1-Lnx.png"/>
-        <p class="ana-sayfa-GBv">Ana Sayfa</p>
+      <div class="mainpage_div">
+        <img class="mainpage_icon" src="./assets/icons8-home-50-1-Lnx.png"/>
+        <p class="mainpage_text">Ana Sayfa</p>
       </div>
     </div>
-    <div class="search-bar">
+    <div class="search_bar">
       <input type="text" placeholder="Ne arıyorsun?" />
-      <img class="search-icon" src="./assets/search-icon.png"/>
+      
     </div>
-    <div class="auto-group-zlrr-ztc">
-      <img class="rectangle-13-SVi" src="./assets/rectangle-13.png"/>
-      <p class="ne-aryorsun--xDA">
-      Ne arıyorsun ?
-      <br/>
-      </p>
+    
+    <div class="consumed_favourites_div">
+      <div class="recently_consumed">Son tüketilenler</div>
+      <div class="favourites">Favoriler</div>
     </div>
-    <div class="auto-group-cpf2-oUg">
-      <div class="auto-group-huag-LDi">Son tüketilenler</div>
-      <div class="auto-group-pq1e-yGg">Favoriler</div>
+    <div class="line1-1">
     </div>
-    <div class="line-1-EiQ">
+    <div class="line2-1">
     </div>
-    <div class="line-6-tnx">
+    <div class="line2-2">
     </div>
-    <div class="line-7-dkY">
+    <div class="line2-3">
     </div>
-    <div class="line-8-aQt">
+    <div class="line2-4">
     </div>
-    <div class="line-9-8SQ">
+    <div class="line1-2">
     </div>
-    <div class="line-2-G2p">
+    <div class="line1-3">
     </div>
-    <div class="line-3-PdE">
+    <div class="line1-4">
     </div>
-    <div class="line-4-w8x">
-    </div>
-    <div class="auto-group-qzt2-Ueg">
-      <p class="halanm-yumurta-1-tam-50g-cF6">
-        <span class="halanm-yumurta-1-tam-50g-cF6-sub-0">
+    <div class="first_part_div">
+      <p class="text_1-1">
+        <span class="text_1-1-sub-0">
         Haşlanmış Yumurta 
         <br/>
         </span>
-        <span class="halanm-yumurta-1-tam-50g-cF6-sub-1">1 tam (50g)</span>
+        <span class="text_1-1_gram">1 tam (50g)</span>
       </p>
-      <p class="kcal-eb6">72 kcal</p>
-      <img class="icons8-add-50-2-13-Zi4" src="./assets/icons8-add-50-2-13.png"/>
-      <p class="patates-kzartmas-1-porsiyon-75g-V5v">
-        <span class="patates-kzartmas-1-porsiyon-75g-V5v-sub-0">
+      <p class="text_1-1_kcal">72 kcal</p>
+      <img class="text_1-1_icon" src="./assets/icons8-add-50-2-13.png"/>
+      <p class="text_2-1">
+        <span class="text_2-1-sub-0">
         Patates Kızartması 
         <br/>
         </span>
-        <span class="patates-kzartmas-1-porsiyon-75g-V5v-sub-1">1 porsiyon (75g)</span>
+        <span class="text_2-1_gram">1 porsiyon (75g)</span>
       </p>
-      <p class="kcal-GVz">210 kcal</p>
-      <img class="icons8-add-50-2-9-8HJ" src="./assets/icons8-add-50-2-9.png"/>
+      <p class="text_2-1_kcal">210 kcal</p>
+      <img class="text_2-1_icon" src="./assets/icons8-add-50-2-9.png"/>
     </div>
-    <div class="auto-group-6nqa-Fcp">
-      <p class="beyaz-ekmek-1-dilim-28g-aQC">
-        <span class="beyaz-ekmek-1-dilim-28g-aQC-sub-0">
+    <div class="second_part_div">
+      <p class="text_1-2">
+        <span class="text_1-2-sub-0">
         Beyaz Ekmek  
         <br/>
         </span>
-        <span class="beyaz-ekmek-1-dilim-28g-aQC-sub-1">1 dilim (28g)</span>
+        <span class="text_1-2_gram">1 dilim (28g)</span>
       </p>
-      <p class="kcal-Zmv">74 kcal</p>
-      <img class="icons8-add-50-2-14-tZJ" src="./assets/icons8-add-50-2-14.png"/>
-      <p class="mercimek-orbas-1-kase-300g-DLg">
-        <span class="mercimek-orbas-1-kase-300g-DLg-sub-0">
+      <p class="text_1-2_kcal">74 kcal</p>
+      <img class="text_1-2_icon" src="./assets/icons8-add-50-2-14.png"/>
+      <p class="text_2-2">
+        <span class="text_2-2-sub-0">
         Mercimek Çorbası
         <br/>
         </span>
-        <span class="mercimek-orbas-1-kase-300g-DLg-sub-1">1 Kase (300g)</span>
+        <span class="text_2-2_gram">1 Kase (300g)</span>
       </p>
-      <p class="kcal-Ko2">138 kcal</p>
-      <img class="icons8-add-50-2-10-3yv" src="./assets/icons8-add-50-2-10.png"/>
+      <p class="text_2-2_kcal">138 kcal</p>
+      <img class="text_2-2_icon" src="./assets/icons8-add-50-2-10.png"/>
     </div>
-    <div class="auto-group-p1il-BqE">
-      <p class="muz-1-adet-150g-KRe">
-        <span class="muz-1-adet-150g-KRe-sub-0">
+    <div class="third_part_div">
+      <p class="text_1-3">
+        <span class="text_1-3-sub-0">
         Muz
         <br/>
         </span>
-        <span class="muz-1-adet-150g-KRe-sub-1"> 1 adet (150g)</span>
+        <span class="text_1-3_gram"> 1 adet (150g)</span>
       </p>
-      <p class="kcal-x7E">134 kcal</p>
-      <img class="icons8-add-50-2-15-szt" src="./assets/icons8-add-50-2-15.png"/>
-      <p class="tavuk-gspimi-1-dilim-58g-DJ4">
-        <span class="tavuk-gspimi-1-dilim-58g-DJ4-sub-0">
+      <p class="text_1-3_kcal">134 kcal</p>
+      <img class="text_1-3_icon" src="./assets/icons8-add-50-2-15.png"/>
+      <p class="text_2-3">
+        <span class="text_2-3-sub-0">
         Tavuk Göğsü,pişmiş 
         <br/>
         </span>
-        <span class="tavuk-gspimi-1-dilim-58g-DJ4-sub-1">1 dilim (58g)</span>
+        <span class="text_2-3_gram">1 dilim (58g)</span>
       </p>
-      <p class="kcal-Pbr">114 kcal</p>
-      <img class="icons8-add-50-2-11-7nk" src="./assets/icons8-add-50-2-11.png"/>
+      <p class="text_2-3_kcal">114 kcal</p>
+      <img class="text_2-3_icon" src="./assets/icons8-add-50-2-11.png"/>
     </div>
-    <div class="auto-group-s4ww-eng">
-      <p class="st-1-bardak-250g-m6c">
-        <span class="st-1-bardak-250g-m6c-sub-0">
+    <div class="fourth_part_div">
+      <p class="text_1-4">
+        <span class="text_1-4-sub-0">
         Süt 
         <br/>
         </span>
-        <span class="st-1-bardak-250g-m6c-sub-1"> 1 Bardak (250g)</span>
+        <span class="text_1-4_gram"> 1 Bardak (250g)</span>
       </p>
-      <p class="kcal-iAG">149 kcal</p>
-      <img class="icons8-add-50-2-16-1v4" src="./assets/icons8-add-50-2-16.png"/>
-      <p class="elma-1-tam-90g-JuA">
-        <span class="elma-1-tam-90g-JuA-sub-0">
+      <p class="text_1-4_kcal">149 kcal</p>
+      <img class="text_1-4_icon" src="./assets/icons8-add-50-2-16.png"/>
+      <p class="text_2-4">
+        <span class="text_2-4-sub-0">
         Elma 
         <br/>
         </span>
-        <span class="elma-1-tam-90g-JuA-sub-1">1 tam (90g)</span>
+        <span class="text_2-4_gram">1 tam (90g)</span>
       </p>
-      <p class="kcal-Lax">47 kcal</p>
-      <img class="icons8-add-50-2-12-coN" src="./assets/icons8-add-50-2-12.png"/>
+      <p class="text_2-4_kcal">47 kcal</p>
+      <img class="text_2-4_icon" src="./assets/icons8-add-50-2-12.png"/>
     </div>
   </div>
 </body>
